Improved responses on other entities and removed id to use auto increment
