# src/models/clientModel.ts
@@ -1,5 +1,4 @@
 export interface Client {
-  client_id: number, 
   name: string, 
   email: string, 
   phone_number: string;
