# src/models/localeModel.ts
@@ -1,4 +1,3 @@
 export interface Locale {
-  locale_id: number, 
   name: string;
 }
