# src/models/productModel.ts
@@ -1,5 +1,4 @@
 export interface Product {
-  product_id: number, 
   name: string, 
   description: string, 
   seller_id: number,
