# src/models/sellerModel.ts
@@ -1,5 +1,4 @@
 export interface Seller {
-  seller_id: number, 
   name: string, 
   email: string, 
   phone_number: string;
